test/passing/tests/line_directives.ml.err
ocamlformat: ignoring "tests/line_directives.ml" (syntax error)
File "tests/line_directives.ml", line 1, characters 1-9:
1 | #3 "f.ml"
     ^^^^^^^^
Error: Invalid lexer directive "#3 \"f.ml\"": line directives are not supported
