test/passing/tests/line_directives.ml
#3 "f.ml"

let x =
#4 "f.ml"
  y
#5 "f.ml"
